--- a/faq.html
+++ b/faq.html
@@ -133,7 +133,10 @@
 					Write log file, read and parse configuration file.
 					<p><a>A: </a>Done in version 1.0.26.<i> - Jun. 13 2017</i></p>
 				</li>
-				<li>Right control.</li>
+				<li>
+					Spinlock overflow issue, and rights control.
+					<p><a>A: </a>Done in version 1.0.29.<i> - Jun. 15 2017</i></p>
+				</li>
 				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
 				<li>Message queue.</li>
 				<li>Smooth restart.</li>
