--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,9 @@
 				},
 				onUsers: function(e) {
 					users.innerText = e.channel.total;
+				},
+				onClose: function(e) {
+					users.innerText = 0;
 				}
 			}
 		});
