--- a/playease.html
+++ b/playease.html
@@ -406,6 +406,9 @@ _eventMapping = {
 				},
 				onUsers: function(e) {
 					users.innerText = e.channel.total;
+				},
+				onClose: function(e) {
+					users.innerText = 0;
 				}
 			}
 		});
