--- a/solutions.html
+++ b/solutions.html
@@ -277,6 +277,9 @@
 				},
 				onUsers: function(e) {
 					users.innerText = e.channel.total;
+				},
+				onClose: function(e) {
+					users.innerText = 0;
 				}
 			}
 		});
