--- a/playease.html
+++ b/playease.html
@@ -354,7 +354,7 @@ _eventMapping = {
 				type: 'flv'
 			}],*/
 			type: 'vod',
-			cors: 'no-cors',
+			cors: 'cors',
 			bufferTime: 1,
 			maxretries: 0,
 			controls: true,
