--- a/solutions.html
+++ b/solutions.html
@@ -224,7 +224,7 @@
 				type: 'def'
 			}],
 			type: 'live',
-			cors: 'no-cors',
+			cors: 'cors',
 			bufferTime: 1,
 			maxretries: 0,
 			controls: true,
