--- a/faq.html
+++ b/faq.html
@@ -137,6 +137,10 @@
 					Spinlock overflow issue, and rights control.
 					<p><a>A: </a>Done in version 1.0.29.<i> - Jun. 15 2017</i></p>
 				</li>
+				<li>
+					Http upstream push-status.
+					<p><a>A: </a>Done in version 1.0.33.<i> - Jun. 28 2017</i></p>
+				</li>
 				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
 				<li>Message queue.</li>
 				<li>Smooth restart.</li>
@@ -156,11 +160,14 @@
 					"Player is not ready yet!"<br/>
 					<p><a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while video tag is not supported by IE8 natively.</p>
 				</li>
+				<li>
+					Buffer control in "flv" and "wss" renders.
+					<p><a>A: </a>Done in version 1.0.65.<i> - Jun. 29 2017</i></p>
+				</li>
 				<li>Buffering display.</li>
 				<li>Logo component.</li>
 				<li>Context menu component.</li>
 				<li>Bitrate menu overlay.</li>
-				<li>Buffer control in "flv" and "wss" renders.</li>
 			</ul>
 		</section>
 		</article>
