--- a/faq.html
+++ b/faq.html
@@ -164,6 +164,10 @@
 					Buffer control in "flv" and "wss" renders.
 					<p><a>A: </a>Done in version 1.0.65.<i> - Jun. 29 2017</i></p>
 				</li>
+				<li>
+					Added support to Firefox and Edge on "flv" render.
+					<p><a>A: </a>Done in version 1.0.67.<i> - Jul. 5 2017</i></p>
+				</li>
 				<li>Buffering display.</li>
 				<li>Logo component.</li>
 				<li>Context menu component.</li>
