--- a/solutions.html
+++ b/solutions.html
@@ -217,19 +217,21 @@
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'rtmp://cclive.qcus.cn/teach/sample',
-				type: 'flash'
+				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
+				type: 'flv'
 			}, {
-				file: 'http://cchls.qcus.cn/teach/sample/index.m3u8',
+				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
 			}],
-			type: 'live',
-			cors: 'cors',
+			mode: 'live',
 			bufferTime: 1,
 			maxretries: 0,
 			controls: true,
 			autoplay: false,
 			//poster: 'images/poster.png',
+			loader: {
+				mode: 'cors'
+			},
 			render: {
 				name: 'def',
 				swf: 'swf/playease.swf'
