--- a/playease.html
+++ b/playease.html
@@ -360,6 +360,9 @@ _eventMapping = {
 			sources: [{
 				file: 'http://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv'
+			}, {
+				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
+				type: 'def'
 			}],
 			mode: 'live',
 			bufferTime: 1,
