--- a/playease.html
+++ b/playease.html
@@ -361,6 +361,9 @@ _eventMapping = {
 				file: 'http://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv'
 			}, {
+				file: 'rtmp://cclive.qcus.cn/teach/stream02',
+				type: 'flash'
+			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
 			}],
