--- a/solutions.html
+++ b/solutions.html
@@ -220,6 +220,9 @@
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv'
 			}, {
+				file: 'rtmp://cclive.qcus.cn/teach/stream02',
+				type: 'flash'
+			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
 			}],
