--- a/playease.html
+++ b/playease.html
@@ -358,8 +358,8 @@ _eventMapping = {
 			aspectratio: '16:9',
 			//file: '/vod/sample.mp4',
 			sources: [{
-				file: 'http://ccws.qcus.cn/teach/stream02.flv',
-				type: 'wss'
+				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
+				type: 'flv'
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash'
