--- a/solutions.html
+++ b/solutions.html
@@ -218,10 +218,16 @@
 			//file: '/vod/sample.mp4',
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
-				type: 'flv'
+				type: 'flv',
+				label: '1080P-FLV'
+			}, {
+				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
+				type: 'flv',
+				label: '1080P-WS'
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
-				type: 'flash'
+				type: 'flash',
+				label: '1080P-FLASH'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
@@ -234,6 +240,9 @@
 			//poster: 'images/poster.png',
 			loader: {
 				mode: 'cors'
+			},
+			logo: {
+				file: ''
 			},
 			render: {
 				name: 'def',
