--- a/faq.html
+++ b/faq.html
@@ -168,10 +168,11 @@
 					Added support to Firefox and Edge on "flv" render.
 					<p><a>A: </a>Done in version 1.0.67.<i> - Jul. 5 2017</i></p>
 				</li>
-				<li>Buffering display.</li>
-				<li>Logo component.</li>
+				<li>
+					Added more UI components, e.g. display, logo, tooltip. And support to multi-quality.
+					<p><a>A: </a>Done in version 1.0.72.<i> - Jul. 12 2017</i></p>
+				</li>
 				<li>Context menu component.</li>
-				<li>Bitrate menu overlay.</li>
 			</ul>
 		</section>
 		</article>
