--- a/playease.html
+++ b/playease.html
@@ -97,7 +97,7 @@
 			</p>
 			
 			<p>
-				This is a HTML5 media player for FLV live streaming. It also supports FLV VoD and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS, and RTMP streaming for MSIE with flash embed in.
+				This is a HTML5 video player for FLV/fMP4 live streaming, FLV/fMP4 VoD and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS, and RTMP streaming for MSIE with flash embed in.
 			</p>
 			
 			<h3>News</h3>
@@ -156,7 +156,8 @@ playease('player').setup({
 <br/>
 
 			<p>
-				For more configurations, please check cn/studease/embed/playease.embed.config.js.
+			For more configurations, please check cn/studease/embed/playease.embed.config.js.<br/>
+			Component config is at the front of their sources.
 			</p>
 
 <?prettify lang=js linenums=true?>
@@ -181,13 +182,10 @@ _defaults = {
     loader: {
         mode: iomodes.CORS
     },
+    logo: {
+        visible: true
+    },
     bulletscreen: {
-        enable: true,
-        fontsize: 14,
-        interval: 30,
-        duration: 12000,
-        alpha: alphas.LOW,
-        position: positions.FULLSCREEN,
         visible: true
     },
     render: {
@@ -197,7 +195,9 @@ _defaults = {
     skin: {
         name: skintypes.DEFAULT
     },
-    events: {}
+    events: {
+        
+    }
 };
 </pre>
 <br/>
@@ -272,7 +272,7 @@ _eventMapping = {
 					<a>volume(vol)</a>
 				</li>
 				<li>
-					<a>hd()</a>
+					<a>hd(index)</a>
 				</li>
 				<li>
 					<a>bullet()</a>
