--- a/solutions.html
+++ b/solutions.html
@@ -219,7 +219,7 @@
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: '1080P-FLV'
+				label: '1080P-HTTP'
 			}, {
 				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv',
@@ -227,7 +227,7 @@
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
-				label: '1080P-FLASH'
+				label: '1080P-RTMP'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
