--- a/playease.html
+++ b/playease.html
@@ -360,7 +360,7 @@ _eventMapping = {
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: '1080P-FLV'
+				label: '1080P-HTTP'
 			}, {
 				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv',
@@ -368,7 +368,7 @@ _eventMapping = {
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
-				label: '1080P-FLASH'
+				label: '1080P-RTMP'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
