--- a/playease.html
+++ b/playease.html
@@ -186,6 +186,7 @@ _defaults = {
         visible: true
     },
     bulletscreen: {
+        enable: true,
         visible: true
     },
     render: {
