--- a/playease.html
+++ b/playease.html
@@ -138,7 +138,23 @@ playease('player').setup({
     height: 400,
     file: '/vod/sample.flv',
     /*sources: [{
-        file: '/vod/sample.mp4',
+        file: 'http://127.0.0.1/live/sample.flv',
+        type: 'flv',
+        label: 'HTTP-FLV'
+    }, {
+        file: 'ws://127.0.0.1/live/sample.flv',
+        type: 'flv',
+        label: 'WS-FLV'
+    }, {
+        file: 'ws://127.0.0.1/live/sample',
+        type: 'wss',
+        label: 'WS-fMP4'
+    }, {
+        file: 'rtmp://127.0.0.1/live/sample',
+        type: 'flash',
+        label: 'RTMP'
+    }, {
+        file: 'http://127.0.0.1/live/sample.m3u8',
         type: 'def'
     }],*/
     mode: 'vod',
@@ -361,15 +377,15 @@ _eventMapping = {
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: '1080P-HTTP'
+				label: 'HTTP-FLV'
 			}, {
 				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: '1080P-WS'
+				label: 'WS-FLV'
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
-				label: '1080P-RTMP'
+				label: 'RTMP'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
