--- a/playease.html
+++ b/playease.html
@@ -140,19 +140,19 @@ playease('player').setup({
     /*sources: [{
         file: 'http://127.0.0.1/live/sample.flv',
         type: 'flv',
-        label: 'HTTP-FLV'
+        label: 'H5-HTTP-FLV'
     }, {
         file: 'ws://127.0.0.1/live/sample.flv',
         type: 'flv',
-        label: 'WS-FLV'
+        label: 'H5-WS-FLV'
     }, {
         file: 'ws://127.0.0.1/live/sample',
         type: 'wss',
-        label: 'WS-fMP4'
+        label: 'H5-WS-fMP4'
     }, {
         file: 'rtmp://127.0.0.1/live/sample',
         type: 'flash',
-        label: 'RTMP'
+        label: 'FLASH-RTMP'
     }, {
         file: 'http://127.0.0.1/live/sample.m3u8',
         type: 'def'
@@ -377,15 +377,15 @@ _eventMapping = {
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: 'HTTP-FLV'
+				label: 'H5-HTTP-FLV'
 			}, {
 				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: 'WS-FLV'
+				label: 'H5-WS-FLV'
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
-				label: 'RTMP'
+				label: 'FLASH-RTMP'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
