--- a/solutions.html
+++ b/solutions.html
@@ -219,15 +219,15 @@
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: 'HTTP-FLV'
+				label: 'H5-HTTP-FLV'
 			}, {
 				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: 'WS-FLV'
+				label: 'H5-WS-FLV'
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
-				label: 'RTMP'
+				label: 'FLASH-RTMP'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
