--- a/playease.html
+++ b/playease.html
@@ -400,7 +400,7 @@ _eventMapping = {
 				mode: 'cors'
 			},
 			logo: {
-				file: ''
+				file: 'images/content/logo.png'
 			},
 			render: {
 				name: 'def',
