--- a/donate.html
+++ b/donate.html
@@ -97,8 +97,8 @@
 			</div>
 			
 			<div class='pay'>
-				<img class='alipay' src='images/alipay.jpg' />
-				<img class='wxpay' src='images/wxpay.jpg' />
+				<img class='alipay' src='images/content/alipay.jpg' />
+				<img class='wxpay' src='images/content/wxpay.jpg' />
 			</div>
 		</section>
 		</div>
