--- a/playease.html
+++ b/playease.html
@@ -395,7 +395,7 @@ _eventMapping = {
 			maxretries: 0,
 			controls: true,
 			autoplay: false,
-			poster: 'images/poster.png',
+			poster: 'images/content/poster.png',
 			loader: {
 				mode: 'cors'
 			},
