--- a/playease.html
+++ b/playease.html
@@ -377,15 +377,15 @@ _eventMapping = {
 			sources: [{
 				file: 'http://ccflv.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: 'H5-HTTP-FLV'
+				label: 'HTTP-FLV'
 			}, {
 				file: 'ws://ccws.qcus.cn/teach/stream02.flv',
 				type: 'flv',
-				label: 'H5-WS-FLV'
+				label: 'WS-FLV'
 			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
-				label: 'FLASH-RTMP'
+				label: 'RTMP-STREAM'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
 				type: 'def'
