--- a/playease.html
+++ b/playease.html
@@ -94,6 +94,7 @@
 		<section>
 			<p>
 				[source] <a href='https://github.com/studease/playease' target='_blank'>https://github.com/studease/playease</a>
+				[zh_doc] <a href='http://blog.csdn.net/icysky1989/article/details/75094205' target='_blank'>http://blog.csdn.net/icysky1989/article/details/75094205</a>
 			</p>
 			
 			<p>
