--- a/playease.html
+++ b/playease.html
@@ -93,7 +93,7 @@
 		<div>
 		<section>
 			<p>
-				[source] <a href='https://github.com/studease/playease' target='_blank'>https://github.com/studease/playease</a>
+				[source] <a href='https://github.com/studease/playease' target='_blank'>https://github.com/studease/playease</a><br/>
 				[zh_doc] <a href='http://blog.csdn.net/icysky1989/article/details/75094205' target='_blank'>http://blog.csdn.net/icysky1989/article/details/75094205</a>
 			</p>
 			
