--- a/playease.html
+++ b/playease.html
@@ -141,19 +141,19 @@ playease('player').setup({
     /*sources: [{
         file: 'http://127.0.0.1/live/sample.flv',
         type: 'flv',
-        label: 'H5-HTTP-FLV'
+        label: 'HTTP-FLV'
     }, {
         file: 'ws://127.0.0.1/live/sample.flv',
         type: 'flv',
-        label: 'H5-WS-FLV'
+        label: 'WS-FLV'
     }, {
         file: 'ws://127.0.0.1/live/sample',
         type: 'wss',
-        label: 'H5-WS-fMP4'
+        label: 'WS-fMP4'
     }, {
         file: 'rtmp://127.0.0.1/live/sample',
         type: 'flash',
-        label: 'FLASH-RTMP'
+        label: 'RTMP-STREAM'
     }, {
         file: 'http://127.0.0.1/live/sample.m3u8',
         type: 'def'
