--- a/playease.html
+++ b/playease.html
@@ -394,7 +394,7 @@ _eventMapping = {
 				mode: 'cors'
 			},
 			logo: {
-				file: 'images/content/logo.png'
+				file: 'images/content/playease-logo.png'
 			},
 			render: {
 				name: 'def',
