--- a/solutions.html
+++ b/solutions.html
@@ -242,7 +242,7 @@
 				mode: 'cors'
 			},
 			logo: {
-				file: 'images/content/logo.png'
+				file: 'images/content/playease-logo.png'
 			},
 			render: {
 				name: 'def',
