--- a/faq.html
+++ b/faq.html
@@ -172,7 +172,10 @@
 					Added more UI components, e.g. display, logo, tooltip. And support to multi-quality.
 					<p><a>A: </a>Done in version 1.0.72.<i> - Jul. 12 2017</i></p>
 				</li>
-				<li>Context menu component.</li>
+				<li>
+					Context menu component.
+					<p><a>A: </a>Done in version 1.0.75.<i> - Jul. 14 2017</i></p>
+				</li>
 			</ul>
 		</section>
 		</article>
