--- a/chatease.html
+++ b/chatease.html
@@ -102,7 +102,7 @@
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
-				<li>Added support to MSIE 8 & 9 for <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
+				<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
 				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 				<li><a href='chatease.html'>Chatease.js</a>, a client-side script for websocket chat, beta released.<i> - Aug. 1, 2016</i></li>
 			</ul>
