--- a/faq.html
+++ b/faq.html
@@ -165,7 +165,7 @@
 					<p><a>A: </a>Done in version 1.0.65.<i> - Jun. 29 2017</i></p>
 				</li>
 				<li>
-					Added support to Firefox and Edge on "flv" render.
+					Added support for Firefox and Edge of "flv" render.
 					<p><a>A: </a>Done in version 1.0.67.<i> - Jul. 5 2017</i></p>
 				</li>
 				<li>
@@ -175,6 +175,10 @@
 				<li>
 					Context menu component.
 					<p><a>A: </a>Done in version 1.0.75.<i> - Jul. 14 2017</i></p>
+				</li>
+				<li>
+					New feature: DASH.
+					<p><a>A: </a>Done in version 1.0.81.<i> - Aug. 10 2017</i></p>
 				</li>
 			</ul>
 		</section>
