--- a/playease.html
+++ b/playease.html
@@ -98,11 +98,13 @@
 			</p>
 			
 			<p>
-				This is a HTML5 video player for FLV/fMP4 live streaming, FLV/fMP4 VoD and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS, and RTMP streaming for MSIE with flash embed in.
+				This is a HTML5 video player for FLV/fMP4 live streaming, FLV/fMP4 VoD, DASH, and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS.<br/>
+				It also supports RTMP streaming for MSIE with flash embed in.
 			</p>
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
+				<li>New feature of <a href='playease.html'>playease.js</a>: DASH.<i> - Aug. 10, 2017</i></li>
 				<li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
 				<li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
 				<li><a href='playease.html'>Playease.js</a>, an HTML5 media player for FLV live streaming, beta released.<i> - Feb. 10, 2017</i></li>
