--- a/playease.html
+++ b/playease.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="playease.js,html5 flv player,html5 video player,html5播放器,ie8,ie9,flv,fmp4,rtmp,hls" />
+	<meta name="keywords" content="playease.js,html5 video player,html5 flv player,html5 dash player,html5播放器,ie8,ie9,flv,fmp4,dash,rtmp,hls" />
 	<meta name="description" content="This is a HTML5 video player for FLV/fMP4 live streaming." />
 	<meta name="author" content="Tony Lau" />
 	
@@ -391,7 +391,7 @@ _eventMapping = {
 			maxretries: 0,
 			controls: true,
 			autoplay: false,
-			poster: 'images/content/poster.png',
+			//poster: 'images/content/poster.png',
 			loader: {
 				mode: 'cors'
 			},
