--- a/playease.html
+++ b/playease.html
@@ -104,7 +104,7 @@
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
-				<li>New feature of <a href='playease.html'>playease.js</a>: DASH.<i> - Aug. 10, 2017</i></li>
+				<li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
 				<li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
 				<li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
 				<li><a href='playease.html'>Playease.js</a>, an HTML5 media player for FLV live streaming, beta released.<i> - Feb. 10, 2017</i></li>
