--- a/playease.html
+++ b/playease.html
@@ -98,7 +98,7 @@
 			</p>
 			
 			<p>
-				This is a HTML5 video player for FLV/fMP4 live streaming, FLV/fMP4 VoD, DASH, and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS.<br/>
+				This is a HTML5 video player for FLV/fMP4 live streaming, FLV/fMP4 VoD, MPEG-DASH, and original HTML5 media resources, eg. Ogg, Mpeg4, WebM, HLS.<br/>
 				It also supports RTMP streaming for MSIE with flash embed in.
 			</p>
 			
