--- a/faq.html
+++ b/faq.html
@@ -177,7 +177,7 @@
 					<p><a>A: </a>Done in version 1.0.75.<i> - Jul. 14 2017</i></p>
 				</li>
 				<li>
-					New feature: DASH.
+					New feature: MPEG-DASH.
 					<p><a>A: </a>Done in version 1.0.81.<i> - Aug. 10 2017</i></p>
 				</li>
 			</ul>
