--- a/faq.html
+++ b/faq.html
@@ -180,6 +180,10 @@
 					New feature: MPEG-DASH.
 					<p><a>A: </a>Done in version 1.0.81.<i> - Aug. 10 2017</i></p>
 				</li>
+				<li>
+					Failed to addSourceBuffer for video/audio, especially on Edge.
+					<p><a>A: </a>Fixed in version 1.0.82.<i> - Aug. 11 2017</i></p>
+				</li>
 			</ul>
 		</section>
 		</article>
