--- a/solutions.html
+++ b/solutions.html
@@ -225,6 +225,14 @@
 				type: 'flv',
 				label: 'WS-FLV'
 			}, {
+				file: 'ws://127.0.0.1:8080/teach/stream02',
+				type: 'wss',
+				label: 'WS-fMP4'
+			}, {
+				file: 'http://origin.qcus.cn:1935/teach/stream02/manifest.mpd',
+				type: 'dash',
+				label: 'MPEG-DASH'
+			}, {
 				file: 'rtmp://cclive.qcus.cn/teach/stream02',
 				type: 'flash',
 				label: 'RTMP-STREAM'
