--- a/chatease-server.html
+++ b/chatease-server.html
@@ -101,6 +101,7 @@
 			
 			<h3>News</h3>
 			<ul class='u5 square'>
+				<li>Fixed bad request caused crash, & incomplete http header caused endless loop issues in version 1.0.39.<i> - Aug. 15, 2017</li>
 				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
 				<li><a href='chatease-server.html'>Chatease-server</a>, a websocket chat server coded in C, beta released.<i> - Aug. 4, 2016</i></li>
 			</ul>
@@ -131,7 +132,7 @@ cmake ..
 
 <?prettify lang=js linenums=true?>
 <pre class='prettyprint'>
-sudo ./chatease-server
+sudo ./start.sh
 </pre>
 <br/>
 
@@ -142,7 +143,7 @@ sudo ./chatease-server
 			
 			<h3>Software License</h3>
 			<p>
-				MIT.
+				Apache License 2.0.
 			</p>
 		</section>
 		</div>
