--- a/faq.html
+++ b/faq.html
@@ -141,10 +141,11 @@
 					Http upstream push-status.
 					<p><a>A: </a>Done in version 1.0.33.<i> - Jun. 28 2017</i></p>
 				</li>
-				<li>Bad upgrade request won't get the explanation before the connection is closed.</li>
-				<li>Message queue.</li>
-				<li>Smooth restart.</li>
-				<li>Backstage management system.</li>
+				<li>
+					Fixed bad request caused crash, & incomplete http header caused endless loop issues.
+					<p><a>A: </a>Done in version 1.0.39.<i> - Aug. 15 2017</i></p>
+				</li>
+				<li>Backstage Management System.</li>
 			</ul>
 		</section>
 		</article>
