--- a/solutions.html
+++ b/solutions.html
@@ -252,6 +252,13 @@
 			logo: {
 				file: 'images/content/playease-logo.png'
 			},
+			bulletscreen: {
+				enable: true,
+				visible: true
+			},
+			fullpage: {
+				visible: true
+			},
 			render: {
 				name: 'def',
 				swf: 'swf/playease.swf'
