--- a/playease.html
+++ b/playease.html
@@ -150,6 +150,10 @@ playease('player').setup({
         label: 'WS-FLV'
     }, {
         file: 'ws://127.0.0.1/live/sample',
+        type: 'rtmpmate',
+        label: 'WS-RTMPMATE'
+    }, {
+        file: 'ws://127.0.0.1/live/sample',
         type: 'wss',
         label: 'WS-fMP4'
     }, {
@@ -161,18 +165,31 @@ playease('player').setup({
         type: 'flash',
         label: 'RTMP-STREAM'
     }, {
-        file: 'http://127.0.0.1/live/sample.m3u8',
+        file: 'http://127.0.0.1/live/sample/index.m3u8',
         type: 'def'
     }],*/
     mode: 'vod',
     controls: true,
-    autoplay: true,
-    poster: 'sample.png',
+    autoplay: false,
+    //poster: 'sample.png',
+    //report: true,
     loader: {
+        //name: 'xhr-chunked-loader',
         mode: 'cors'
     },
+    logo: {
+        file: 'logo.png'
+    },
+    bulletscreen: {
+        enable: true,
+        visible: true
+    },
+    /*fullpage: {
+        visible: true
+    },*/
     render: {
-        name: 'flv'
+        name: 'def',
+        swf: '../swf/playease.swf'
     }
 });
 </pre>
@@ -200,7 +217,7 @@ _defaults = {
     airplay: 'allow',
     playsinline: true,
     poster: '',
-    report: true,
+    report: false,
     debug: false,
     loader: {
         mode: iomodes.CORS
@@ -210,7 +227,10 @@ _defaults = {
     },
     bulletscreen: {
         enable: true,
-        visible: true
+        visible: false
+    },
+    fullpage: {
+        visible: false
     },
     render: {
         name: rendertypes.DEFAULT,
@@ -402,6 +422,13 @@ _eventMapping = {
 			},
 			logo: {
 				file: 'images/content/playease-logo.png'
+			},
+			bulletscreen: {
+				enable: true,
+				visible: true
+			},
+			fullpage: {
+				visible: true
 			},
 			render: {
 				name: 'def',
