--- a/solutions.html
+++ b/solutions.html
@@ -74,9 +74,9 @@
 					<a href='#'>PROJECTS</a>
 					<ul>
 						<li><a href='slicease.html'>slicease.js 3.0</a></li>
+						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='chatease.html'>chatease.js</a></li>
 						<li><a href='chatease-server.html'>chatease-server</a></li>
-						<li><a href='playease.html'>playease.js</a></li>
 						<li><a href='http://rtmpmate.com' target='_blank'>rtmpmate</a></li>
 					</ul>
 				</li>
@@ -208,7 +208,6 @@
 	
 	<script type='text/javascript'>
 		var player, chat, users;
-		
 		users = document.getElementById('ol-users');
 		
 		player = playease('player').setup({
@@ -246,7 +245,10 @@
 			controls: true,
 			autoplay: false,
 			//poster: 'images/poster.png',
+			//report: true,
 			loader: {
+				/*name: 'xhr-chunked-loader',
+				chunkSize: 2 * 1024 * 1024,*/
 				mode: 'cors'
 			},
 			logo: {
