--- a/solutions.html
+++ b/solutions.html
@@ -297,7 +297,23 @@
 					if (chat) {
 						chat.resize();
 					}
-				}
+				}/*,
+				onResize: function(e) {
+					if (playease.utils.isAndroid() && playease.utils.isQQBrowser()) {
+						var video = document.getElementById('player').firstChild.lastChild;
+						video.style.width = window.innerWidth + "px";
+						video.style.height = window.innerHeight + "px";
+						video.style['object-position'] = 'center top';
+						
+						var controlbar = document.getElementById('player').childNodes[1];
+						controlbar.style.top = e.height - 40 + "px";
+						controlbar.style.position = "absolute";
+						
+						var next = document.getElementById('chatwrap');
+						next.style.top = e.height + "px";
+						next.style.position = "absolute";
+					}
+				}*/
 			}
 		});
 		
