--- a/chatease.html
+++ b/chatease.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="chatease.js,websocket,聊天室,ie8,ie9" />
+	<meta name="keywords" content="chatease.js,websocket,chat room,聊天室,ie8,ie9" />
 	<meta name="description" content="This is a client-side script for websocket chat." />
 	<meta name="author" content="Tony Lau" />
 	
@@ -132,13 +132,34 @@
 
 <?prettify lang=js linenums=true?>
 <pre class='prettyprint'>
-&lt;div id='chatwrap'&gt;&lt;/div&gt;
+&lt;div class='ol-status' style='width: 100%; max-width: 640px;'&gt;
+	&lt;label&gt;Online: &lt;/label&gt;
+	&lt;span id='ol-users'&gt;0&lt;/span&gt;
+&lt;/div&gt;
+&lt;div id='chatwrap' style='width: 100%; height: 400px; max-width: 640px;'&gt;
+	&lt;div id='chat'&gt;&lt;/div&gt;
+&lt;/div&gt;
 ...
-var chat = chatease('chatwrap').setup({
-    url: 'ws://localhost/ch1?token=123456',
-    width: 640,
-    height: 400
+
+var users = document.getElementById('ol-users');
+var events = chatease.events;
+
+var chat = chatease('chat');
+chat.addEventListener(events.CHATEASE_INDENT, onIdent);
+chat.addEventListener(events.CHATEASE_CLOSE, onClose);
+chat.setup({
+	url: 'ws://localhost/ch1?token=123456',
+	width: 640,
+	height: 400
 });
+
+function onIdent(e) {
+	users.innerText = e.channel.total;
+}
+
+function onClose(e) {
+	users.innerText = 0;
+}
 </pre>
 <br/>
 
@@ -158,7 +179,9 @@ _defaults = {
     maxretries: -1,   // -1: always
     retrydelay: 3000,
     render: {
-        name: rendermodes.DEFAULT
+        name: rendermodes.DEFAULT,
+        title: 'CHATEASE ' + chatease.version,
+        swf: 'swf/chatease.swf'
     },
     skin: {
         name: skinmodes.DEFAULT
@@ -180,6 +203,19 @@ var chat = chatease('chatwrap').setup({
         ...
     }
 });
+
+// or
+
+var events = chatease.events;
+var chat = chatease('chat');
+chat.addEventListener(events.CHATEASE_READY, onReady);
+chat.setup({
+    ...
+});
+
+function onReady(e) {
+    console.log('onReady');
+}
 </pre>
 <br/>
 
@@ -278,12 +314,15 @@ _eventMapping = {
 			prettyPrint();
 		};
 		
-		var chat, users;
+		var users = document.getElementById('ol-users');
+		var events = chatease.events;
 		
-		users = document.getElementById('ol-users');
-		
-		chat = chatease('chat').setup({
-			url: 'ws://118.190.79.29/001' + (function() {
+		var chat = chatease('chat');
+		chat.addEventListener(events.CHATEASE_INDENT, onIdent);
+		chat.addEventListener(events.CHATEASE_USERS, onUsers);
+		chat.addEventListener(events.CHATEASE_CLOSE, onClose);
+		chat.setup({
+			url: 'ws://chat.qcus.cn/001' + (function() {
 				var params = window.location.search;
 				if (params) {
 					return params;
@@ -296,20 +335,23 @@ _eventMapping = {
 			width: 640,
 			height: 400,
 			maxretries: -1,
-			events: {
-				onIdent: function(e) {
-					users.innerText = e.channel.total;
-				},
-				onMessage: function(e) {
-					//player.shoot(e.data);
-				},
-				onUsers: function(e) {
-					users.innerText = e.channel.total;
-				},
-				onClose: function(e) {
-					users.innerText = 0;
-				}
+			render: {
+				name: 'def',
+				title: 'CHATEASE ' + chatease.version,
+				swf: 'swf/chatease.swf'
 			}
 		});
+		
+		function onIdent(e) {
+			users.innerText = e.channel.total;
+		}
+		
+		function onUsers(e) {
+			users.innerText = e.channel.total;
+		}
+		
+		function onClose(e) {
+			users.innerText = 0;
+		}
 	</script>
 </body>
