--- a/playease.html
+++ b/playease.html
@@ -538,8 +538,7 @@ _eventMapping = {
 			height: 400,
 			maxretries: -1,
 			render: {
-				name: 'def',
-				title: 'CHATEASE ' + chatease.version,
+				name: 'none',
 				swf: 'swf/chatease.swf'
 			}
 		});
