--- a/solutions.html
+++ b/solutions.html
@@ -89,13 +89,14 @@
 	
 	<div class='wrap'>
 		<div class='center'>
-		<section>
+		<section style='position:relative;'>
 			<h3>VIDEO & MESSAGE SOLUTIONS</h3>
 			<p>
 				Beyond our open-sourced projects and rich experience in live broadcast field,<br/>
 				we provide solutions to support your online video and real-time message strategy<br/>
 				and achieve your revenue, audience growth, and implementation goals.
 			</p>
+			<img class='qr-code' src='images/content/solutions-mobile.png'>
 		</section>
 		</div>
 		
@@ -214,7 +215,6 @@
 		var events = playease.events;
 		
 		player = playease('player');
-		player.addEventListener(events.PLAYEASE_READY, onReady);
 		player.addEventListener(events.PLAYEASE_FULLPAGE, onFullpage);
 		player.addEventListener(events.RESIZE, onResize);
 		player.setup({
@@ -274,12 +274,6 @@
 			}
 		});
 		
-		function onReady(e) {
-			if (chat) {
-				chat.resize();
-			}
-		}
-		
 		function onFullpage(e) {
 			pw.style.position = e.exit ? '' : 'fixed';
 			pw.style.zIndex = e.exit ? '' : 100;
@@ -307,21 +301,8 @@
 		}
 		
 		function onResize(e) {
-			if (playease.utils.isAndroid() && playease.utils.isQQBrowser()) {
-				var video = document.getElementById('player').firstChild.lastChild;
-				video.style.width = window.innerWidth + "px";
-				video.style.height = window.innerHeight + "px";
-				video.style['object-position'] = 'center top';
-				
-				var controlbar = document.getElementById('player').childNodes[1];
-				controlbar.style.top = e.height - 40 + "px";
-				controlbar.style.position = "absolute";
-				
-				var next = document.getElementById('chatwrap');
-				next.style.top = e.height + "px";
-				next.style.bottom = '0px';
-				next.style.position = "absolute";
-				next.style.zIndex = 999;
+			if (chat) {
+				chat.resize();
 			}
 		}
 		
