--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -81,12 +81,14 @@ a:active, a:focus, a:hover {
 	<script type='text/javascript' src='js/chatease.min.js'></script>
 </head>
 <body ontouchstart=''>
-	<div id='ol-users' class='ol-status'>0</div>
-	<div id='playwrap' style='width:100%; top:0; left:0; position:relative;'>
-		<div id='player'></div>
-	</div>
-	<div id='chatwrap' style='width: 100%; background: red;'>
-		<div id='chat'></div>
+	<div style='width:100%; height:100%; position: fixed;'>
+		<div id='ol-users' class='ol-status'>0</div>
+		<div id='playwrap' style='width:100%; top:0; left:0; position:relative;'>
+			<div id='player'></div>
+		</div>
+		<div id='chatwrap' style='width: 100%; background: red;'>
+			<div id='chat'></div>
+		</div>
 	</div>
 	
 	<script type='text/javascript'>
