--- a/chatease.html
+++ b/chatease.html
@@ -334,6 +334,7 @@ _eventMapping = {
 			})(),
 			width: 640,
 			height: 400,
+			maxlength: 50,
 			maxretries: -1,
 			render: {
 				name: 'def',
