--- a/playease.html
+++ b/playease.html
@@ -536,6 +536,7 @@ _eventMapping = {
 			})(),
 			width: 320,
 			height: 400,
+			maxlength: 50,
 			maxretries: -1,
 			render: {
 				name: 'none',
