--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -202,6 +202,7 @@ a:active, a:focus, a:hover {
 			})(),
 			width: 320,
 			height: 400,
+			maxlength: 50,
 			maxretries: -1,
 			render: {
 				name: 'def',
