--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
 				
 				var id = Math.ceil(Math.random() * 1000);
 				
-				return '?name=游客' + chatease.utils.pad(id, 3);
+				return '?name=游客' + chatease.utils.pad(id, 3) + '&icon=/images/icon/tourist.png';
 			})(),
 			width: 640,
 			height: 400,
