--- a/playease.html
+++ b/playease.html
@@ -532,7 +532,7 @@ _eventMapping = {
 				
 				var id = Math.ceil(Math.random() * 1000);
 				
-				return '?name=游客' + chatease.utils.pad(id, 3);
+				return '?name=游客' + chatease.utils.pad(id, 3) + '&icon=/images/icon/tourist.png';
 			})(),
 			width: 320,
 			height: 400,
