--- a/playease.html
+++ b/playease.html
@@ -495,7 +495,7 @@ _eventMapping = {
 				visible: true
 			},
 			fullpage: {
-				visible: true
+				visible: !playease.utils.isMobile()
 			},
 			render: {
 				name: 'def',
