--- a/solutions.html
+++ b/solutions.html
@@ -5,7 +5,7 @@
 	
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,chatease-server,rtmpmate" />
+	<meta name="keywords" content="playease.js,chatease.js,chatease-server,rtmpmate,微信直播,弹幕直播" />
 	<meta name="description" content="" />
 	<meta name="author" content="Tony Lau" />
 	
@@ -96,7 +96,9 @@
 				we provide solutions to support your online video and real-time message strategy<br/>
 				and achieve your revenue, audience growth, and implementation goals.
 			</p>
-			<img class='qr-code' src='images/content/solutions-mobile.png'>
+			<a href='solutions-mobile.html'>
+				<img class='qr-code' src='images/content/solutions-mobile.png'>
+			</a>
 		</section>
 		</div>
 		
@@ -244,7 +246,8 @@
 				label: 'RTMP-STREAM'
 			}, {
 				file: 'http://cchls.qcus.cn/teach/stream02/index.m3u8',
-				type: 'def'
+				type: 'def',
+				label: 'HLS-TS'
 			}],
 			mode: 'live',
 			bufferTime: 1,
@@ -266,7 +269,7 @@
 				visible: true
 			},
 			fullpage: {
-				visible: true
+				visible: !playease.utils.isMobile()
 			},
 			render: {
 				name: 'def',
