--- a/chatease.html
+++ b/chatease.html
@@ -336,6 +336,7 @@ _eventMapping = {
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
+			debug: true,
 			render: {
 				name: 'def',
 				title: 'CHATEASE ' + chatease.version,
