--- a/playease.html
+++ b/playease.html
@@ -538,6 +538,7 @@ _eventMapping = {
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
+			debug: true,
 			render: {
 				name: 'none',
 				swf: 'swf/chatease.swf'
