--- a/solutions.html
+++ b/solutions.html
@@ -331,6 +331,7 @@
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
+			debug: true,
 			render: {
 				name: 'def',
 				title: 'CHATEASE ' + chatease.version,
