--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,7 @@
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
+			debug: true,
 			render: {
 				name: 'def',
 				title: 'CHATEASE ' + chatease.version,
