--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -205,6 +205,7 @@ a:active, a:focus, a:hover {
 			height: 400,
 			maxlength: 50,
 			maxretries: -1,
+			debug: true,
 			render: {
 				name: 'def',
 				title: '',
