--- a/solutions.html
+++ b/solutions.html
@@ -41,6 +41,14 @@
 	
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	
+	<style type='text/css' media='screen'>
+		@media only screen and (max-width: 568px) {
+		.samplewrap #chatwrap .cha-title {
+			display: none;
+		}
+		}
+	</style>
+	
 	<script type='text/javascript' src='js/playease.min.js'></script>
 	<script type='text/javascript' src='js/chatease.min.js'></script>
 </head>
